<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Altimeter</string>
    <string name="action_settings">Settings</string>
    <string name="accelerometer">ACCELEROMETER</string>
    <string name="gravity">gravity</string>
    <string name="linear_acceleration">Linear acceleration</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="rotation_vector">Rotation vector</string>
    <string name="rotation_matrix_rot">Rotation matrix rot</string>
    <string name="rotation_matrix_acc">Rotation matrix acc</string>
    <string name="open_demo">Open Demo</string>
    <string name="log">Log</string>
    <string name="stop">Stop</string>
    <string name="gps_disabled">GPS Disabled</string>
    <string name="gps_disabled_msg">Please enable GPS, to provide a better location detection.\n\nAfter you\'ve enabled GPS, press the back button.</string>
    <string name="enable">Enable</string>
    <string name="start_test">Start Test</string>
    <string name="rotation_test">Rotation Test</string>
    <string name="log_everything">Log everything</string>
    <string name="height">Height: %f</string>
    <string name="height_sum">Height: %.1fm</string>
    <string name="rotation_x_initial">Rotation Initial X: %f</string>
    <string name="rotation_x">Rotation X: %f</string>
    <string name="rotation_y">Rotation Y: %f</string>
    <string name="rotation_z">Rotation Z: %f</string>
    <string name="slower">Slower</string>
    <string name="log_test">Log Test</string>
    <string name="start">Start</string>
    <string name="continue_text">Continue</string>
    <string name="bottom_plane_description">Press start and make slowly a 360 turn.</string>
    <string name="orientation_description">Press start and accelerate and decelerate your car repeatedly.</string>
    <string name="debug">Debug</string>
    <string name="initialize_car_position">Initialize car position</string>
    <string name="initialize_device_position">Initialize device position</string>
    <string name="measure_height">Measure Height</string>
    <string name="ascent">Ascent: %.1f degree</string>
    <string name="rotation_degree">Rotation: %.1f degree</string>
    <string name="finish">Finish</string>
    <string name="reset">Reset</string>

</resources>
