<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/bottom_plane_description"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    <net.vrallev.android.altimeter.view.GapProgressView
            android:id="@+id/gap_progress_view"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

    <TextView
            android:id="@+id/textView_slower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/gap_progress_view"
            android:layout_below="@id/textView"
            android:gravity="center"
            android:text="@string/slower"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"
            tools:visibility="visible" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

        <Button
                android:id="@+id/button_start"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start" />

        <Button
                android:id="@+id/button_reset"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset"
                android:visibility="gone"
                tools:visibility="visible" />

        <Button
                android:id="@+id/button_finish"
                style="@android:style/Widget.Holo.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/finish"
                android:visibility="gone"
                tools:visibility="visible" />

    </LinearLayout>


</RelativeLayout>